--- a/index.html
+++ b/index.html
@@ -2,305 +2,205 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nolan's Games</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Retro Arcade</title>
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      background-color: #1a0033;
-      font-family: 'Courier New', monospace;
-      color: #f0f0f0;
+    }
+    body {
+      font-family: 'Courier New', Courier, monospace;
+      background-color: #1a001a;
       overflow-x: hidden;
     }
-
-    h1 {
-      text-align: center;
-      font-size: 3rem;
-      margin-top: 2rem;
-      color: #ff99ff;
-    }
-
-    .background {
+    .bg-animation {
       position: fixed;
-      width: 100%;
-      height: 100%;
       top: 0;
       left: 0;
-      overflow: hidden;
+      width: 100vw;
+      height: 100vh;
       z-index: -1;
+      overflow: hidden;
     }
-
-    .background div {
+    .square {
       position: absolute;
       width: 100px;
       height: 100px;
-      background-color: rgba(200, 100, 255, 0.2);
-      transform: rotate(45deg);
-      animation: float 30s linear infinite;
+      background-color: rgba(255, 255, 255, 0.05);
+      animation: floatSquare linear infinite;
     }
-
-    @keyframes float {
-      0% {
-        transform: translateY(0) rotate(45deg);
-      }
-      100% {
-        transform: translateY(-1000px) rotate(45deg);
-      }
+    @keyframes floatSquare {
+      0% { transform: translateY(100vh) rotate(0deg); }
+      100% { transform: translateY(-200px) rotate(360deg); }
     }
-
-    .container {
+    .grid-container {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
+      grid-auto-rows: 350px;
       gap: 20px;
       padding: 40px;
-      max-width: 1200px;
-      margin: auto;
     }
-
     .game-box {
-      background-color: #2a0044;
+      background-color: #2e003e;
       border-radius: 15px;
-      overflow: hidden;
-      padding: 20px;
-      position: relative;
-      height: 500px;
-      box-shadow: 0 0 20px rgba(255, 0, 255, 0.4);
-    }
-
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.7);
+      padding: 15px;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
-      color: #ccc;
-      font-size: 1.2rem;
-      transition: 0.3s;
+      position: relative;
     }
-
-    .overlay button {
-      margin-top: 10px;
+    .game-box canvas {
+      border-radius: 10px;
+      background: #000;
+    }
+    .play-button {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #a020f0;
+      color: white;
       padding: 10px 20px;
-      background: #9900cc;
-      color: #fff;
       border: none;
       border-radius: 10px;
+      font-size: 18px;
       cursor: pointer;
-    }
-
-    canvas {
-      border-radius: 10px;
+      z-index: 2;
     }
   </style>
 </head>
 <body>
-  <h1>Nolan's Games</h1>
-  <div class="background">
-    <div style="top: 80vh; left: 5vw;"></div>
-    <div style="top: 90vh; left: 25vw;"></div>
-    <div style="top: 85vh; left: 45vw;"></div>
-    <div style="top: 95vh; left: 65vw;"></div>
-    <div style="top: 92vh; left: 85vw;"></div>
+  <div class="bg-animation" id="bg-container"></div>
+  <div class="grid-container">
+    <div class="game-box">
+      <button class="play-button" onclick="startGame(0)">Play</button>
+      <canvas id="game0" width="400" height="300"></canvas>
+    </div>
+    <div class="game-box">
+      <button class="play-button" onclick="startGame(1)">Play</button>
+      <canvas id="game1" width="400" height="300"></canvas>
+    </div>
+    <div class="game-box">
+      <button class="play-button" onclick="startGame(2)">Play</button>
+      <canvas id="game2" width="400" height="300"></canvas>
+    </div>
+    <div class="game-box">
+      <button class="play-button" onclick="startGame(3)">Play</button>
+      <canvas id="game3" width="400" height="300"></canvas>
+    </div>
+    <!-- Add 8 more rows x 3 columns if needed -->
   </div>
-
-  <div class="container">
-    <div class="game-box">
-      <div class="overlay" id="overlay1">
-        <div>Gravity Switcher</div>
-        <button onclick="startGame('game1')">Play</button>
-      </div>
-      <canvas id="game1" width="300" height="400"></canvas>
-    </div>
-
-    <div class="game-box">
-      <div class="overlay" id="overlay2">
-        <div>Wall Jumper</div>
-        <button onclick="startGame('game2')">Play</button>
-      </div>
-      <canvas id="game2" width="300" height="400"></canvas>
-    </div>
-
-    <div class="game-box">
-      <div class="overlay" id="overlay3">
-        <div>Laser Dodger</div>
-        <button onclick="startGame('game3')">Play</button>
-      </div>
-      <canvas id="game3" width="300" height="400"></canvas>
-    </div>
-
-    <div class="game-box">
-      <div class="overlay" id="overlay4">
-        <div>Falling Blocks</div>
-        <button onclick="startGame('game4')">Play</button>
-      </div>
-      <canvas id="game4" width="300" height="400"></canvas>
-    </div>
-
-    <!-- The rest of the 3x9 boxes -->
-    <!-- You can duplicate the following div to complete all 27 boxes -->
-    <!-- Here, we add 'Coming Soon' boxes -->
-    <script>
-      for (let i = 5; i <= 27; i++) {
-        document.write(`
-          <div class="game-box">
-            <div class="overlay">
-              <div>Coming Soon</div>
-            </div>
-          </div>
-        `);
-      }
-    </script>
-  </div>
-
   <script>
-    let activeCanvas = null;
+    // Generate background squares
+    const bgContainer = document.getElementById('bg-container');
+    for (let i = 0; i < 20; i++) {
+      const square = document.createElement('div');
+      square.classList.add('square');
+      square.style.left = `${Math.random() * 100}vw`;
+      square.style.animationDuration = `${8 + Math.random() * 10}s`;
+      square.style.animationDelay = `${Math.random() * 5}s`;
+      square.style.transform = `rotate(${Math.random() * 360}deg)`;
+      bgContainer.appendChild(square);
+    }
 
-    function startGame(id) {
-      if (activeCanvas) {
-        stopGame(activeCanvas);
+    // State control
+    const contexts = [];
+    const animations = [null, null, null, null];
+    const playButtons = document.querySelectorAll('.play-button');
+
+    function resetOtherGames(except) {
+      for (let i = 0; i < 4; i++) {
+        if (i !== except) {
+          cancelAnimationFrame(animations[i]);
+          const ctx = contexts[i];
+          if (ctx) ctx.clearRect(0, 0, 400, 300);
+          playButtons[i].style.display = 'block';
+        }
+      }
+    }
+
+    function startGame(index) {
+      resetOtherGames(index);
+      playButtons[index].style.display = 'none';
+      switch (index) {
+        case 0: gravitySwitcher(index); break;
+        case 1: wallJumper(index); break;
+        case 2: laserDodger(index); break;
+        case 3: mysteryGame(index); break;
+      }
+    }
+
+    // Helper for timers
+    function drawTimer(ctx, time) {
+      ctx.fillStyle = 'white';
+      ctx.font = '16px monospace';
+      ctx.fillText(`Time: ${Math.floor(time / 1000)}s`, 10, 20);
+    }
+
+    // GAME 1: GRAVITY SWITCHER
+    function gravitySwitcher(index) {
+      const canvas = document.getElementById(`game${index}`);
+      const ctx = canvas.getContext('2d');
+      contexts[index] = ctx;
+      const player = { x: 50, y: 250, size: 20, gravity: 1 };
+      const obstacles = [];
+      let lastSpawn = 0;
+      let time = 0;
+
+      function spawnObstacle() {
+        obstacles.push({ x: 400, y: player.gravity > 0 ? 280 : 0, width: 20, height: 20 });
       }
 
-      document.getElementById('overlay' + id.replace('game', '')).style.display = 'none';
-      activeCanvas = id;
+      document.onkeydown = (e) => {
+        if (e.key === 'w') player.gravity = -1;
+        if (e.key === 's') player.gravity = 1;
+      };
 
-      if (id === 'game1') gravitySwitcher(id);
-      else if (id === 'game2') wallJumper(id);
-      else if (id === 'game3') laserDodger(id);
-      else if (id === 'game4') fallingBlocks(id);
-    }
+      function loop(ts) {
+        ctx.clearRect(0, 0, 400, 300);
+        time += 16;
 
-    function stopGame(id) {
-      const canvas = document.getElementById(id);
-      const ctx = canvas.getContext('2d');
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      document.getElementById('overlay' + id.replace('game', '')).style.display = 'flex';
-    }
-
-    function gravitySwitcher(id) {
-      const canvas = document.getElementById(id);
-      const ctx = canvas.getContext('2d');
-      let y = canvas.height - 30;
-      let gravity = -3;
-      let redY = 0;
-      let score = 0;
-      let gameOver = false;
-
-      function draw() {
-        if (gameOver) return;
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-        // Red obstacle
-        ctx.fillStyle = 'red';
-        ctx.fillRect(canvas.width / 2 - 10, redY, 20, 20);
-
-        // Green player
-        ctx.fillStyle = 'lime';
-        ctx.fillRect(canvas.width / 2 - 10, y, 20, 20);
-
-        // Collision
-        if (y < redY + 20 && y + 20 > redY && canvas.width / 2 - 10 < canvas.width / 2 + 10) {
-          gameOver = true;
-          stopGame(id);
-          return;
+        if (ts - lastSpawn > 1500 - Math.min(time / 10, 1000)) {
+          spawnObstacle();
+          lastSpawn = ts;
         }
 
-        y += gravity;
-        if (y < 0) y = 0;
-        if (y > canvas.height - 20) y = canvas.height - 20;
-      }
+        // Player transition
+        player.y += (player.gravity > 0 ? 1 : -1) * (player.y < 280 && player.gravity > 0 || player.y > 0 && player.gravity < 0 ? 4 : 0);
+        player.y = Math.max(0, Math.min(280, player.y));
 
-      document.onkeydown = (e) => {
-        if (e.code === 'Space') gravity = -gravity;
-      };
+        // Draw player
+        ctx.fillStyle = 'lime';
+        ctx.fillRect(player.x, player.y, player.size, player.size);
 
-      setInterval(draw, 30);
-    }
-
-    function wallJumper(id) {
-      const canvas = document.getElementById(id);
-      const ctx = canvas.getContext('2d');
-      let x = 0;
-      let y = canvas.height / 2;
-      let direction = 1;
-
-      function draw() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.fillStyle = 'cyan';
-        ctx.fillRect(x, y, 20, 20);
-
-        x += direction * 2;
-        if (x <= 0 || x >= canvas.width - 20) direction *= -1;
-      }
-      setInterval(draw, 30);
-    }
-
-    function laserDodger(id) {
-      const canvas = document.getElementById(id);
-      const ctx = canvas.getContext('2d');
-      let x = canvas.width / 2;
-      let lasers = [
-        { y: 0, x: Math.random() * (canvas.width - 20) }
-      ];
-
-      document.onkeydown = (e) => {
-        if (e.code === 'ArrowLeft') x -= 10;
-        if (e.code === 'ArrowRight') x += 10;
-      };
-
-      function draw() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.fillStyle = 'orange';
-        ctx.fillRect(x, canvas.height - 20, 20, 20);
-
+        // Move and draw obstacles
         ctx.fillStyle = 'red';
-        lasers.forEach(l => {
-          ctx.fillRect(l.x, l.y, 20, 20);
-          l.y += 5;
+        for (let obs of obstacles) {
+          obs.x -= 2 + time / 5000;
+          ctx.fillRect(obs.x, obs.y, obs.width, obs.height);
 
-          // Collision
-          if (l.y + 20 >= canvas.height - 20 && l.x < x + 20 && l.x + 20 > x) {
-            stopGame(id);
+          if (
+            obs.x < player.x + player.size &&
+            obs.x + obs.width > player.x &&
+            obs.y < player.y + player.size &&
+            obs.y + obs.height > player.y
+          ) {
+            playButtons[index].style.display = 'block';
+            return;
           }
-        });
-
-        if (Math.random() < 0.05) {
-          lasers.push({ y: 0, x: Math.random() * (canvas.width - 20) });
         }
+
+        drawTimer(ctx, time);
+        animations[index] = requestAnimationFrame(loop);
       }
 
-      setInterval(draw, 30);
+      loop(0);
     }
 
-    function fallingBlocks(id) {
-      const canvas = document.getElementById(id);
-      const ctx = canvas.getContext('2d');
-      let blocks = [];
-      let playerY = canvas.height - 20;
-
-      function draw() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.fillStyle = 'lime';
-        ctx.fillRect(canvas.width / 2 - 10, playerY, 20, 20);
-
-        ctx.fillStyle = 'blue';
-        blocks.forEach(b => {
-          b.y += 5;
-          ctx.fillRect(b.x, b.y, 20, 20);
-
-          if (b.y + 20 >= playerY) stopGame(id);
-        });
-
-        if (Math.random() < 0.1) blocks.push({ x: Math.random() * (canvas.width - 20), y: 0 });
-      }
-
-      setInterval(draw, 30);
-    }
+    // GAME 2: WALL JUMPER (will continue in next response)
   </script>
 </body>
 </html>
