--- a/index.html
+++ b/index.html
@@ -3,204 +3,359 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Retro Arcade</title>
+  <title>Nolan's Games</title>
   <style>
+    :root {
+      --bg-dark: #1a002d;
+      --purple-light: rgba(200, 150, 255, 0.2);
+      --highlight: #a166ff;
+    }
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      font-family: monospace;
     }
     body {
-      font-family: 'Courier New', Courier, monospace;
-      background-color: #1a001a;
+      background: var(--bg-dark);
       overflow-x: hidden;
     }
-    .bg-animation {
+    header {
+      background: #2a0040;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
       position: fixed;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: -1;
-      overflow: hidden;
+      width: 100%;
+      z-index: 1000;
     }
-    .square {
-      position: absolute;
-      width: 100px;
-      height: 100px;
-      background-color: rgba(255, 255, 255, 0.05);
-      animation: floatSquare linear infinite;
+    header h1 {
+      font-size: 3rem;
     }
-    @keyframes floatSquare {
-      0% { transform: translateY(100vh) rotate(0deg); }
-      100% { transform: translateY(-200px) rotate(360deg); }
+    header .btns {
+      margin-top: 1rem;
     }
-    .grid-container {
+    header button {
+      background: var(--highlight);
+      border: none;
+      color: white;
+      margin: 0 0.5rem;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    main {
+      margin-top: 250px;
+    }
+    .game-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: 350px;
-      gap: 20px;
-      padding: 40px;
+      gap: 1rem;
+      padding: 2rem;
+      max-width: 1200px;
+      margin: auto;
     }
     .game-box {
-      background-color: #2e003e;
-      border-radius: 15px;
-      padding: 15px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-    }
-    .game-box canvas {
-      border-radius: 10px;
       background: #000;
+      border: 2px solid var(--highlight);
+      border-radius: 10px;
+      height: 300px;
+      position: relative;
+      overflow: hidden;
     }
-    .play-button {
+    canvas {
+      width: 100%;
+      height: 100%;
+      display: block;
+      background: linear-gradient(#000 80%, #111);
+    }
+    .play-btn {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: #a020f0;
+      z-index: 10;
+      background: var(--highlight);
       color: white;
-      padding: 10px 20px;
       border: none;
+      padding: 0.5rem 1.5rem;
+      font-size: 1rem;
       border-radius: 10px;
-      font-size: 18px;
       cursor: pointer;
-      z-index: 2;
+    }
+    .floating-square {
+      width: 50px;
+      height: 50px;
+      background: var(--purple-light);
+      position: fixed;
+      top: 100vh;
+      left: calc(100vw * var(--rand-x));
+      transform: rotate(var(--rand-rot));
+      animation: floatUp var(--duration) linear infinite;
+      pointer-events: auto;
+    }
+    @keyframes floatUp {
+      from {
+        transform: translateY(0) rotate(var(--rand-rot));
+      }
+      to {
+        transform: translateY(-150vh) rotate(calc(var(--rand-rot) + 360deg));
+      }
+    }
+    .coming-soon {
+      color: white;
+      text-align: center;
+      font-size: 2rem;
+      padding-top: 40%;
     }
   </style>
 </head>
 <body>
-  <div class="bg-animation" id="bg-container"></div>
-  <div class="grid-container">
-    <div class="game-box">
-      <button class="play-button" onclick="startGame(0)">Play</button>
-      <canvas id="game0" width="400" height="300"></canvas>
+  <header>
+    <h1>Nolan's Games</h1>
+    <div class="btns">
+      <button onclick="alert('Settings not available yet')">Settings</button>
+      <button onclick="alert('More content coming soon')">More</button>
     </div>
-    <div class="game-box">
-      <button class="play-button" onclick="startGame(1)">Play</button>
-      <canvas id="game1" width="400" height="300"></canvas>
+  </header>
+
+  <main>
+    <div class="game-grid" id="gameGrid">
+      <!-- Gravity Game -->
+      <div class="game-box" id="gravityBox">
+        <button class="play-btn" onclick="startGravitySwitcher(this)">Play</button>
+        <canvas id="gravityCanvas"></canvas>
+      </div>
+
+      <!-- Wall Jumper Game -->
+      <div class="game-box" id="wallJumpBox">
+        <button class="play-btn" onclick="startWallJumpGame(this)">Play</button>
+        <canvas id="wallJumpCanvas"></canvas>
+      </div>
+
+      <!-- Coming soon boxes -->
+      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
     </div>
-    <div class="game-box">
-      <button class="play-button" onclick="startGame(2)">Play</button>
-      <canvas id="game2" width="400" height="300"></canvas>
-    </div>
-    <div class="game-box">
-      <button class="play-button" onclick="startGame(3)">Play</button>
-      <canvas id="game3" width="400" height="300"></canvas>
-    </div>
-    <!-- Add 8 more rows x 3 columns if needed -->
-  </div>
+  </main>
+
   <script>
-    // Generate background squares
-    const bgContainer = document.getElementById('bg-container');
-    for (let i = 0; i < 20; i++) {
-      const square = document.createElement('div');
-      square.classList.add('square');
-      square.style.left = `${Math.random() * 100}vw`;
-      square.style.animationDuration = `${8 + Math.random() * 10}s`;
-      square.style.animationDelay = `${Math.random() * 5}s`;
-      square.style.transform = `rotate(${Math.random() * 360}deg)`;
-      bgContainer.appendChild(square);
+    // Disable scroll while a game is running
+    function disableScroll() {
+      document.body.style.overflow = 'hidden';
+    }
+    function enableScroll() {
+      document.body.style.overflow = 'auto';
     }
 
-    // State control
-    const contexts = [];
-    const animations = [null, null, null, null];
-    const playButtons = document.querySelectorAll('.play-button');
+    // Floating squares background
+    function spawnSquares(count = 10) {
+      for (let i = 0; i < count; i++) {
+        const square = document.createElement('div');
+        square.className = 'floating-square';
+        square.style.setProperty('--rand-x', Math.random());
+        square.style.setProperty('--rand-rot', `${Math.random() * 360}deg`);
+        square.style.setProperty('--duration', `${5 + Math.random() * 10}s`);
 
-    function resetOtherGames(except) {
-      for (let i = 0; i < 4; i++) {
-        if (i !== except) {
-          cancelAnimationFrame(animations[i]);
-          const ctx = contexts[i];
-          if (ctx) ctx.clearRect(0, 0, 400, 300);
-          playButtons[i].style.display = 'block';
-        }
+        let isDragging = false;
+        let offset = { x: 0, y: 0 };
+
+        square.addEventListener('mousedown', (e) => {
+          isDragging = true;
+          offset.x = e.clientX - square.getBoundingClientRect().left;
+          offset.y = e.clientY - square.getBoundingClientRect().top;
+          square.style.animationPlayState = 'paused';
+        });
+
+        document.addEventListener('mousemove', (e) => {
+          if (!isDragging) return;
+          square.style.top = `${e.clientY - offset.y}px`;
+          square.style.left = `${e.clientX - offset.x}px`;
+        });
+
+        document.addEventListener('mouseup', () => {
+          isDragging = false;
+          square.style.animationPlayState = 'running';
+        });
+
+        document.body.appendChild(square);
       }
     }
+    spawnSquares();
 
-    function startGame(index) {
-      resetOtherGames(index);
-      playButtons[index].style.display = 'none';
-      switch (index) {
-        case 0: gravitySwitcher(index); break;
-        case 1: wallJumper(index); break;
-        case 2: laserDodger(index); break;
-        case 3: mysteryGame(index); break;
-      }
-    }
+    // Gravity Game Logic
+    let gravityGame = {
+      ctx: null,
+      player: { x: 80, y: 250, size: 20, gravity: 1 },
+      enemies: [],
+      isRunning: false,
+      speed: 2,
+      canvas: null
+    };
 
-    // Helper for timers
-    function drawTimer(ctx, time) {
-      ctx.fillStyle = 'white';
-      ctx.font = '16px monospace';
-      ctx.fillText(`Time: ${Math.floor(time / 1000)}s`, 10, 20);
-    }
-
-    // GAME 1: GRAVITY SWITCHER
-    function gravitySwitcher(index) {
-      const canvas = document.getElementById(`game${index}`);
+    function startGravitySwitcher(btn) {
+      disableScroll();
+      btn.style.display = 'none';
+      const canvas = document.getElementById('gravityCanvas');
       const ctx = canvas.getContext('2d');
-      contexts[index] = ctx;
-      const player = { x: 50, y: 250, size: 20, gravity: 1 };
-      const obstacles = [];
-      let lastSpawn = 0;
-      let time = 0;
+      gravityGame.canvas = canvas;
+      gravityGame.ctx = ctx;
+      gravityGame.enemies = [];
+      gravityGame.speed = 2;
+      gravityGame.player.y = 250;
+      gravityGame.isRunning = true;
+      requestAnimationFrame(updateGravity);
 
-      function spawnObstacle() {
-        obstacles.push({ x: 400, y: player.gravity > 0 ? 280 : 0, width: 20, height: 20 });
-      }
-
-      document.onkeydown = (e) => {
-        if (e.key === 'w') player.gravity = -1;
-        if (e.key === 's') player.gravity = 1;
-      };
-
-      function loop(ts) {
-        ctx.clearRect(0, 0, 400, 300);
-        time += 16;
-
-        if (ts - lastSpawn > 1500 - Math.min(time / 10, 1000)) {
-          spawnObstacle();
-          lastSpawn = ts;
-        }
-
-        // Player transition
-        player.y += (player.gravity > 0 ? 1 : -1) * (player.y < 280 && player.gravity > 0 || player.y > 0 && player.gravity < 0 ? 4 : 0);
-        player.y = Math.max(0, Math.min(280, player.y));
-
-        // Draw player
-        ctx.fillStyle = 'lime';
-        ctx.fillRect(player.x, player.y, player.size, player.size);
-
-        // Move and draw obstacles
-        ctx.fillStyle = 'red';
-        for (let obs of obstacles) {
-          obs.x -= 2 + time / 5000;
-          ctx.fillRect(obs.x, obs.y, obs.width, obs.height);
-
-          if (
-            obs.x < player.x + player.size &&
-            obs.x + obs.width > player.x &&
-            obs.y < player.y + player.size &&
-            obs.y + obs.height > player.y
-          ) {
-            playButtons[index].style.display = 'block';
-            return;
-          }
-        }
-
-        drawTimer(ctx, time);
-        animations[index] = requestAnimationFrame(loop);
-      }
-
-      loop(0);
+      setInterval(() => {
+        if (gravityGame.isRunning) gravityGame.speed += 0.1;
+      }, 2000);
     }
 
-    // GAME 2: WALL JUMPER (will continue in next response)
+    document.addEventListener('keydown', (e) => {
+      if (!gravityGame.isRunning) return;
+      if (e.key === 'w') animateGravitySwitch(-1);
+      else if (e.key === 's') animateGravitySwitch(1);
+    });
+
+    function animateGravitySwitch(direction) {
+      gravityGame.player.gravity = direction;
+      const start = gravityGame.player.y;
+      const end = direction === 1 ? 250 : 30;
+      let startTime = null;
+
+      function animate(time) {
+        if (!startTime) startTime = time;
+        const elapsed = time - startTime;
+        const progress = Math.min(elapsed / 70, 1);
+        gravityGame.player.y = start + (end - start) * progress;
+        if (progress < 1) requestAnimationFrame(animate);
+      }
+      requestAnimationFrame(animate);
+    }
+
+    function updateGravity() {
+      const { ctx, player, canvas, enemies } = gravityGame;
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      ctx.fillStyle = '#0f0';
+      ctx.fillRect(player.x, player.y, player.size, player.size);
+
+      if (Math.random() < 0.03) {
+        enemies.push({ x: 400, y: Math.random() < 0.5 ? 30 : 250, size: 20 });
+      }
+
+      ctx.fillStyle = '#f00';
+      for (let i = enemies.length - 1; i >= 0; i--) {
+        let e = enemies[i];
+        e.x -= gravityGame.speed;
+        ctx.fillRect(e.x, e.y, e.size, e.size);
+
+        if (
+          e.x < player.x + player.size &&
+          e.x + e.size > player.x &&
+          e.y < player.y + player.size &&
+          e.y + e.size > player.y
+        ) {
+          endGravityGame();
+        }
+        if (e.x + e.size < 0) enemies.splice(i, 1);
+      }
+
+      if (gravityGame.isRunning) requestAnimationFrame(updateGravity);
+    }
+
+    function endGravityGame() {
+      gravityGame.isRunning = false;
+      document.querySelector('#gravityBox .play-btn').style.display = 'block';
+      enableScroll();
+    }
+
+    // Wall Jumper Game Logic
+    let wallGame = {
+      ctx: null,
+      canvas: null,
+      player: { x: 0, y: 260, size: 20, vy: 0 },
+      platforms: [],
+      isRunning: false,
+      gravity: 0.5,
+      jumpPower: -8,
+      speed: 2
+    };
+
+    function startWallJumpGame(btn) {
+      disableScroll();
+      btn.style.display = 'none';
+      const canvas = document.getElementById('wallJumpCanvas');
+      const ctx = canvas.getContext('2d');
+      wallGame.canvas = canvas;
+      wallGame.ctx = ctx;
+      wallGame.player = { x: 0, y: 260, size: 20, vy: 0 };
+      wallGame.platforms = [];
+      wallGame.speed = 2;
+      wallGame.isRunning = true;
+      spawnWallPlatforms();
+      requestAnimationFrame(updateWallJump);
+      setInterval(() => {
+        if (wallGame.isRunning) wallGame.speed += 0.1;
+      }, 3000);
+    }
+
+    document.addEventListener('keydown', (e) => {
+      if (!wallGame.isRunning) return;
+      if (e.code === 'Space') wallGame.player.vy = wallGame.jumpPower;
+    });
+
+    function spawnWallPlatforms() {
+      wallGame.platforms = [];
+      for (let i = 0; i < 7; i++) {
+        let width = 30 + Math.random() * 30;
+        let x = Math.random() * (400 - width);
+        wallGame.platforms.push({ x, y: 280 - i * 40, width, height: 10 });
+      }
+    }
+
+    function updateWallJump() {
+      const { ctx, player, canvas, platforms } = wallGame;
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      player.vy += wallGame.gravity;
+      player.y += player.vy;
+
+      ctx.fillStyle = '#00f';
+      ctx.fillRect(player.x, player.y, player.size, player.size);
+
+      ctx.fillStyle = '#fff';
+      platforms.forEach((plat) => {
+        plat.y += wallGame.speed;
+        ctx.fillRect(plat.x, plat.y, plat.width, plat.height);
+
+        if (
+          player.x < plat.x + plat.width &&
+          player.x + player.size > plat.x &&
+          player.y + player.size < plat.y + plat.height &&
+          player.y + player.size > plat.y - 5 &&
+          player.vy > 0
+        ) {
+          player.vy = 0;
+          player.y = plat.y - player.size;
+        }
+      });
+
+      if (player.y > 300) endWallJumpGame();
+      if (wallGame.isRunning) requestAnimationFrame(updateWallJump);
+    }
+
+    function endWallJumpGame() {
+      wallGame.isRunning = false;
+      document.querySelector('#wallJumpBox .play-btn').style.display = 'block';
+      enableScroll();
+    }
   </script>
 </body>
 </html>
