--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
       color: white;
       text-align: center;
       padding: 2rem 1rem;
-      position: fixed;
+      position: sticky;
       top: 0;
-      left: 0;
-      width: 100%;
       z-index: 1000;
     }
     header h1 {
@@ -45,9 +43,6 @@
       padding: 0.5rem 1rem;
       border-radius: 5px;
       cursor: pointer;
-    }
-    main {
-      margin-top: 250px;
     }
     .game-grid {
       display: grid;
@@ -110,6 +105,13 @@
       font-size: 2rem;
       padding-top: 40%;
     }
+    .shield-meter {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      color: white;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -121,40 +123,24 @@
     </div>
   </header>
 
-  <main>
-    <div class="game-grid" id="gameGrid">
-      <!-- Gravity Game -->
-      <div class="game-box" id="gravityBox">
-        <button class="play-btn" onclick="startGravitySwitcher(this)">Play</button>
-        <canvas id="gravityCanvas"></canvas>
-      </div>
-
-      <!-- Wall Jumper Game -->
-      <div class="game-box" id="wallJumpBox">
-        <button class="play-btn" onclick="startWallJumpGame(this)">Play</button>
-        <canvas id="wallJumpCanvas"></canvas>
-      </div>
-
-      <!-- Coming soon boxes -->
-      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
-      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
-      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
-      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
-      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
-      <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+  <div class="game-grid" id="gameGrid">
+    <div class="game-box" id="gravityBox">
+      <button class="play-btn" onclick="startGravitySwitcher(this)">Play</button>
+      <canvas id="gravityCanvas"></canvas>
     </div>
-  </main>
+    <!-- The next game will be added below in the next step -->
+
+    <!-- Coming soon boxes -->
+    <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+    <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+    <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+    <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+    <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+    <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
+  </div>
 
   <script>
-    // Disable scroll while a game is running
-    function disableScroll() {
-      document.body.style.overflow = 'hidden';
-    }
-    function enableScroll() {
-      document.body.style.overflow = 'auto';
-    }
-
-    // Floating squares background
+    // --- Floating Background Squares ---
     function spawnSquares(count = 10) {
       for (let i = 0; i < count; i++) {
         const square = document.createElement('div');
@@ -189,18 +175,19 @@
     }
     spawnSquares();
 
-    // Gravity Game Logic
+    // --- Gravity Switcher Game Logic ---
     let gravityGame = {
       ctx: null,
       player: { x: 80, y: 250, size: 20, gravity: 1 },
       enemies: [],
       isRunning: false,
+      lastTime: 0,
       speed: 2,
       canvas: null
     };
 
     function startGravitySwitcher(btn) {
-      disableScroll();
+      document.body.style.overflow = 'hidden';
       btn.style.display = 'none';
       const canvas = document.getElementById('gravityCanvas');
       const ctx = canvas.getContext('2d');
@@ -213,18 +200,24 @@
       requestAnimationFrame(updateGravity);
 
       setInterval(() => {
-        if (gravityGame.isRunning) gravityGame.speed += 0.1;
+        if (gravityGame.isRunning) {
+          gravityGame.speed += 0.1;
+        }
       }, 2000);
     }
 
     document.addEventListener('keydown', (e) => {
       if (!gravityGame.isRunning) return;
-      if (e.key === 'w') animateGravitySwitch(-1);
-      else if (e.key === 's') animateGravitySwitch(1);
+      if (e.key === 'w') {
+        gravityGame.player.gravity = -1;
+        animateGravitySwitch(-1);
+      } else if (e.key === 's') {
+        gravityGame.player.gravity = 1;
+        animateGravitySwitch(1);
+      }
     });
 
     function animateGravitySwitch(direction) {
-      gravityGame.player.gravity = direction;
       const start = gravityGame.player.y;
       const end = direction === 1 ? 250 : 30;
       let startTime = null;
@@ -239,7 +232,7 @@
       requestAnimationFrame(animate);
     }
 
-    function updateGravity() {
+    function updateGravity(timestamp) {
       const { ctx, player, canvas, enemies } = gravityGame;
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
@@ -273,88 +266,7 @@
     function endGravityGame() {
       gravityGame.isRunning = false;
       document.querySelector('#gravityBox .play-btn').style.display = 'block';
-      enableScroll();
-    }
-
-    // Wall Jumper Game Logic
-    let wallGame = {
-      ctx: null,
-      canvas: null,
-      player: { x: 0, y: 260, size: 20, vy: 0 },
-      platforms: [],
-      isRunning: false,
-      gravity: 0.5,
-      jumpPower: -8,
-      speed: 2
-    };
-
-    function startWallJumpGame(btn) {
-      disableScroll();
-      btn.style.display = 'none';
-      const canvas = document.getElementById('wallJumpCanvas');
-      const ctx = canvas.getContext('2d');
-      wallGame.canvas = canvas;
-      wallGame.ctx = ctx;
-      wallGame.player = { x: 0, y: 260, size: 20, vy: 0 };
-      wallGame.platforms = [];
-      wallGame.speed = 2;
-      wallGame.isRunning = true;
-      spawnWallPlatforms();
-      requestAnimationFrame(updateWallJump);
-      setInterval(() => {
-        if (wallGame.isRunning) wallGame.speed += 0.1;
-      }, 3000);
-    }
-
-    document.addEventListener('keydown', (e) => {
-      if (!wallGame.isRunning) return;
-      if (e.code === 'Space') wallGame.player.vy = wallGame.jumpPower;
-    });
-
-    function spawnWallPlatforms() {
-      wallGame.platforms = [];
-      for (let i = 0; i < 7; i++) {
-        let width = 30 + Math.random() * 30;
-        let x = Math.random() * (400 - width);
-        wallGame.platforms.push({ x, y: 280 - i * 40, width, height: 10 });
-      }
-    }
-
-    function updateWallJump() {
-      const { ctx, player, canvas, platforms } = wallGame;
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      player.vy += wallGame.gravity;
-      player.y += player.vy;
-
-      ctx.fillStyle = '#00f';
-      ctx.fillRect(player.x, player.y, player.size, player.size);
-
-      ctx.fillStyle = '#fff';
-      platforms.forEach((plat) => {
-        plat.y += wallGame.speed;
-        ctx.fillRect(plat.x, plat.y, plat.width, plat.height);
-
-        if (
-          player.x < plat.x + plat.width &&
-          player.x + player.size > plat.x &&
-          player.y + player.size < plat.y + plat.height &&
-          player.y + player.size > plat.y - 5 &&
-          player.vy > 0
-        ) {
-          player.vy = 0;
-          player.y = plat.y - player.size;
-        }
-      });
-
-      if (player.y > 300) endWallJumpGame();
-      if (wallGame.isRunning) requestAnimationFrame(updateWallJump);
-    }
-
-    function endWallJumpGame() {
-      wallGame.isRunning = false;
-      document.querySelector('#wallJumpBox .play-btn').style.display = 'block';
-      enableScroll();
+      document.body.style.overflow = 'auto';
     }
   </script>
 </body>
